2004-12-05  Dalibor Topic  <robilad@kaffe.org>

	* test/regression/ProcessClassInst.java,
	test/regression/ProcessClassStop.java:
	Updated expected stack traces.

2004-12-05  Casey Marshall  <csm@gnu.org>

	* kaffe/kaffevm/classMethod.h:
	(signers) new field.

	* libraries/clib/native/Class.c:
	(java_lang_Class_getSigners0) new function. implemented.
	(java_lang_Class_getSigners) removed.
	(java_lang_Class_setSigners) implemented.

	* libraries/javalib/java/lang/Class.java:
	(getSigners) implemented.

	* libraries/javalib/java/lang/ClassLoader.java:
	(setSigners) implemented.

2004-12-05  Mark Wielaard  <mark@klomp.org>

	* libraries/javalib/gnu/xml/dom/ls/ReaderInputStream.java
	(ReaderInputStream) Use UTF-8 as the default encoding.

2004-12-05  Dalibor Topic  <robilad@kaffe.org>

	* tools/gjdoc/javalib/Makefile.am:
	Adapted for new files from gjdoc.

	* tools/gjdoc/javalib/Makefile.in:
	Regenerated.

	* tools/gjdoc/javalib/com/sun/javadoc/Doc.java,
	tools/gjdoc/javalib/com/sun/javadoc/RootDoc.java,
	tools/gjdoc/javalib/com/sun/javadoc/SourcePosition.java,
	tools/gjdoc/javalib/doctranslets/gjdoc_common.xsl,
	tools/gjdoc/javalib/doctranslets/html/about.xsl,
	tools/gjdoc/javalib/doctranslets/html/allclasses.xsl,
	tools/gjdoc/javalib/doctranslets/html/allpackages.xsl,
	tools/gjdoc/javalib/doctranslets/html/alphaindex.xsl,
	tools/gjdoc/javalib/doctranslets/html/alphaindex_chunked.xsl,
	tools/gjdoc/javalib/doctranslets/html/classdoc-source.xsl,
	tools/gjdoc/javalib/doctranslets/html/classdoc-uses.xsl,
	tools/gjdoc/javalib/doctranslets/html/classdoc.xsl,
	tools/gjdoc/javalib/doctranslets/html/deprecated.xsl,
	tools/gjdoc/javalib/doctranslets/html/fulltree.xsl,
	tools/gjdoc/javalib/doctranslets/html/gjdoc.xsl,
	tools/gjdoc/javalib/doctranslets/html/help.xsl,
	tools/gjdoc/javalib/doctranslets/html/html_common.xsl,
	tools/gjdoc/javalib/doctranslets/html/index.xsl,
	tools/gjdoc/javalib/doctranslets/html/index_noframes.xsl,