@@ -1,3 +1,8 @@
+2004-12-05  Mark Wielaard  <mark@klomp.org>
+
+	* libraries/javalib/java/lang/VMSecurityManager.java
+	(getClassContext): Cleanup returned stack.
+
 2004-12-05  Dalibor Topic  <robilad@kaffe.org>
 
 	* test/regression/ProcessClassInst.java,
